@@ -1,4 +1,4 @@
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
 package ifneeded base64   2.4   [list source [file join $dir base64.tcl]]
 package ifneeded uuencode 1.1.4 [list source [file join $dir uuencode.tcl]]
-package ifneeded yencode  1.1.1 [list source [file join $dir yencode.tcl]]
+package ifneeded yencode  1.1.2 [list source [file join $dir yencode.tcl]]
